<resources>
    <string name="app_name">Composer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">保存</string>
    <string name="publish">发布</string>
    <string name="search_bar">搜索故事与朋友</string>
    <string name="transition_search_bar">transition_search_bar</string>
    <string name="see_more">更多</string>
    <string name="search_hint_caption">输入故事标题，内容或创作的日期\n即可查询。搜索帮助</string>
    <string name="alert_title_archive_save">故事尚未完成</string>
    <string name="alert_msg_archive_save">是否保存至草稿以便下次继续创作</string>
    <string name="confirm_save_archive">保存</string>
    <string name="cancel_save_archive">不保存</string>
    <string name="alert_neutral_archive_save">取消</string>
    <string name="description_story_cover">故事封面</string>
    <string name="today_story">今日故事</string>
    <string name="all_story">所有故事</string>
    <string name="story_circle">故事圈</string>
    <string name="my_friends">我的朋友</string>
    <string name="click_to_edit">点击编辑</string>
    <string name="settings_general">通用设置</string>
    <string name="settings_security">安全与隐私</string>
    <string name="settings_help">帮助</string>
    <string name="password">更改密码</string>
    <string name="change_password">更改密码</string>
    <string name="night_mode">夜间模式</string>
    <string name="pref_text_size">文章文字大小</string>
    <string name="settings_dev">测试模式</string>
    <string name="debug">测试</string>
    <string name="about">关于</string>
    <string name="feedback">反馈</string>
    <string name="app_full_name">Composer - 创作乐曲一样创作生活</string>
    <string name="check_for_updates">检查更新</string>
    <string name="change_log">更新日志</string>
    <string name="see_topic_of">浏览 #%s</string>
    <string name="change_theme">自定义主題</string>
    <string name="date_of_notification">%d月%d日，周%c</string>
</resources>
